# Virtual-File-System

./: README.md  pyproject.toml  requirements.txt
filesystem_prototype.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
filesystem‑prototype/: README.md  pyproject.toml
filesystem‑prototype/filesystem_prototype.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
filesystem‑prototype/fs/: bench.py  cli.py  exceptions.py
filesystem‑prototype/fs/index/: rbtree.py
filesystem‑prototype/tests/: test_basic.py  test_dir_scaling.py
fs/: cli.py  inode_table.py  node.py  persist.py  vfs.py
fs/index/: btree.py
scripts/: bench_fs.py  bench_read.py  compare_trees.py
tests/: test_cli_smoke.py  test_vfs_basic.py
